Sforce8 Project Data/src/objects/PlanDetail__c.object
<CustomObject>
    <description>プランに関連会計商品を格納するオブジェクト</description>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>プラン明細</relationshipLabel>
        <relationshipName>AccountMasterRef</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JmstRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>消費税(参照)</label>
        <referenceTo>JMST__c</referenceTo>
        <relationshipLabel>プラン明細</relationshipLabel>
        <relationshipName>PlanDlJmsRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanProdcut__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品（プラン）</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>プラン明細 (プラン)</relationshipLabel>
        <relationshipName>PlanProdcutRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>プラン</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>プラン明細</relationshipLabel>
        <relationshipName>PlanRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>金額</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>商品数量</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceRate__c</fullName>
        <label>サービス料(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>プラン明細</label>
    <nameField>
        <label>プラン明細名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>